Fix section heading spacing on mobile
Bug: T414882

--- a/resources/skins.minerva.styles/content/headings.less
+++ b/resources/skins.minerva.styles/content/headings.less
@@ -102,7 +102,6 @@ h6 {
 		}
 	}
 
-	.mw-heading2,
 	.mw-heading3,
 	.mw-heading4,
 	.mw-heading5,
@@ -112,5 +111,10 @@ h6 {
 		// the <p> is sufficient. However, we to account for cases
 		// where the previous sibling element doesnt have any spacing
 		margin: 0.75em 0 0.25em 0;
+	}
+
+	.mw-heading2 {
+		margin: 0;
+		padding: 12px 0;
 	}
 }
