--- a/resources/skins.minerva.styles/ui.less
+++ b/resources/skins.minerva.styles/ui.less
@@ -181,7 +181,6 @@ ul {
 	.mw-parser-output > h2,
 	.mw-parser-output[ data-mw-parsoid-version ] > section > .mw-heading2 {
 		border-bottom: @border-width-base @border-style-base @border-color-muted;
-		margin-bottom: @margin-heading;
 	}
 
 	.mw-parser-output {
